--- a/app/pre_proc/sass/main.sass
+++ b/app/pre_proc/sass/main.sass
@@ -435,6 +435,7 @@ svg
 		font-size: 30px
 	p
 		margin-top: 5px
+		margin-right: 10px
 
 .main_form
 	button
@@ -732,3 +733,6 @@ svg
 
 .form-group input, .form-group textarea
 	padding: 0px
+
+.img-responsive
+	margin: 0 auto
