--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -6,9 +6,9 @@
           <a ui-sref="base.newsView({id:news.objectId})" class="mask"><img ng-src="{{news.img.url}}" alt="image" class="img-responsive zoom-img" alt=""/></a>
         <h3><a ui-sref="base.newsView">{{news.name}}</a></h3>
         <p>{{news.description}}</p>
-          <div class="description"><a ui-sref="base.newsView">Читати більше...</a></div>
+          <div class="description"><a ui-sref="base.newsView({id:news.objectId})">Читати більше...</a></div>
        </div>
-       
+
      </div>
      <!-- <div class="pagination">
       <ul class="margin-top-b"><li class="pagination-start firstItem"><span class="pagenav">Start</span></li>
