--- a/app/templates/video-view.html
+++ b/app/templates/video-view.html
@@ -3,8 +3,8 @@
 			<h1 class="blog_head">Video</h1>
 		    <div class="blog_grid">
 		      <div class="blog_box">
-		        <img src="{{viewMusic.img.url}}" alt="image" class="img-responsive zoom-img" alt=""/>
-		     	<h3><a ui-sref="base.contactDescription">Ut wisi enim ad minim veniam, quis nostrud exerc</a></h3>
-		     	<p>Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,nibh euismod tincidunt</p>
+						<div ng-bind-html="viewVideo.video"></div>
+		     	<h3>{{viewVideo.name}}</h3>
+		     	<p>{{viewVideo.description}}</p>
 		     </div>
 		    </div>
