--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -8,14 +8,15 @@
       </div>
       <div class="al-wrapper-albums">
       <div class="row padding-video">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="video in videoList">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" ng-repeat="video in videoList">
           <div class="al-some-albums">
-            <a ui-sref="base.videoView({id:video.objectId})"><img class="al-img" src="{{video.img.url}}"></a>
-            <h5 class="al-name-albums">{{video.name}}</h5>
+            <div ng-bind-html="video.video" class="video-limit"></div>
+            <a ui-sref="base.videoView({id:video.objectId})"><h5 class="al-name-albums">{{video.name}}</h5></a>
           </div>
         </div>
-
-
     </div>
+</div>
+
+
 </div>
 </header>
