--- a/app/templates/startPage/footer.html
+++ b/app/templates/startPage/footer.html
@@ -5,10 +5,11 @@
 				&copy; 2016 Ярошенко Галина
 				<div class="social_wrap">
 					<ul>
-						<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fa fa-vk"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fa fa-github"></i></a></li>
+						<li><a href="#" target="_blank"><span class="icon-facebook2"></span></a></li>
+						<li><a href="#" target="_blank"><span class="icon-twitter"></span></a></li>
+						<li><a href="#" target="_blank"><span class="icon-vk"></span></i></a></li>
+						<li><a href="#" target="_blank"><span class="icon-instagram"></span></a></li>
+						<!-- <li><a href="#" target="_blank"></i><span class="icon-youtube2"></span></a></li> -->
 					</ul>
 				</div>
 			</div>
