--- a/app/templates/startPage/main.html
+++ b/app/templates/startPage/main.html
@@ -15,10 +15,11 @@
 					</div>
           <div class="social_wrap">
 						<ul>
-							<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-vk"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-github"></i></a></li>
+							<li><a href="#" target="_blank"><span class="icon-facebook2"></span></a></li>
+							<li><a href="#" target="_blank"><span class="icon-twitter"></span></a></li>
+							<li><a href="#" target="_blank"><span class="icon-vk"></span></i></a></li>
+							<li><a href="#" target="_blank"><span class="icon-instagram"></span></a></li>
+							<!-- <li><a href="#" target="_blank"></i><span class="icon-youtube2"></span></a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -123,17 +124,17 @@
 			<div class="row">
 				<div class="col-md-6 col-sm-6">
 					<div class="contact_box">
-						<div class="contacts_icon icon-basic-geolocalize-05"></div>
+						<div class="contacts_icon icon-basic-geolocalize-05"><span class="icon-home"></span></div>
 						<h3>Адреса:</h3>
 						<p>{{contactList[0].street}}</p>
 					</div>
 					<div class="contact_box">
-						<div class="contacts_icon icon-basic-smartphone"></div>
+						<div class="contacts_icon icon-basic-smartphone"><span class="icon-phone"></span></div>
 						<h3>Телефон:</h3>
 						<p>{{contactList[0].headTelephone}}</p>
 					</div>
 					<div class="contact_box">
-						<div class="contacts_icon icon-basic-webpage-img-txt"></div>
+						<div class="contacts_icon icon-basic-webpage-img-txt"><span class="icon-cloud"></span></div>
 						<h3>Веб-сайт:</h3>
 						<p><a href="#" target="_blank">{{contactList[0].headEmail}}</a></p>
 					</div>
