--- a/app/pre_proc/sass/main.sass
+++ b/app/pre_proc/sass/main.sass
@@ -22,7 +22,7 @@ body textarea:required:valid
 	display: none
 
 .main_color_bg
-	background-image: url(../img/bg1.jpg)
+	background-image: url(../img/bg2.jpg)
 	max-height: 400px
 
 
@@ -433,6 +433,7 @@ svg
 		font-size: 14px
 	.contacts_icon
 		font-size: 30px
+		padding-bottom: 10px
 	p
 		margin-top: 5px
 		margin-right: 10px
@@ -519,6 +520,7 @@ svg
 			color: #6E7B8B
 		p
 			margin-top: 18px
+			margin-bottom: 30px
 
 	.owl-controls
 		text-align: center
