--- a/app/templates/startPage/footer.html
+++ b/app/templates/startPage/footer.html
@@ -5,9 +5,9 @@
 				&copy; 2016 Ярошенко Галина
 				<div class="social_wrap">
 					<ul>
-						<li><a href="#" target="_blank"><span class="icon-facebook2"></span></a></li>
+						<li><a href="https://www.facebook.com/cheremosh.ensemble" target="_blank"><span class="icon-facebook2"></span></a></li>
 						<li><a href="#" target="_blank"><span class="icon-twitter"></span></a></li>
-						<li><a href="#" target="_blank"><span class="icon-vk"></span></i></a></li>
+						<li><a href="https://vk.com/cheremosh_ensemble" target="_blank"><span class="icon-vk"></span></i></a></li>
 						<li><a href="#" target="_blank"><span class="icon-instagram"></span></a></li>
 						<!-- <li><a href="#" target="_blank"></i><span class="icon-youtube2"></span></a></li> -->
 					</ul>
