--- a/app/templates/songs.html
+++ b/app/templates/songs.html
@@ -1,9 +1,3 @@
-<!-- <script>
-  $(document).ready(function() {
-
-  });
-</script> -->
-
 <header class="ae-container-fluid ae-container-fluid--full rk-header ">
       <div class="container center-inside-content">
             <div class="row">
@@ -147,7 +141,7 @@
                     <div class="row">
                   <ol class="view-ol">
              <li ng-repeat="song in songs">
-               <button music-player add-song="song" class="view-add">+</button><button music-player="play" add-song="song" class="view-song">{{ song.title }}</button>
+               <button music-player add-song="song">+</button><button music-player="play" add-song="song" class="view-song">{{ song.title }}</button>
              </li>
 
           </ol>
