--- a/app/templates/startPage/main.html
+++ b/app/templates/startPage/main.html
@@ -54,7 +54,7 @@
 				<div class="filter_div controls">
 					<ul>
 						<li class="asd" data-filter="all">Всі останні поїздки </li>
-						<li ng-repeat="categorys in category" class="filter" data-filter=".{{categorys.objectId}}">{{categorys.name}}</li>
+						<li ng-repeat="categorys in cat" class="filter" data-filter=".{{categorys.objectId}}">{{categorys.name}}</li>
 					</ul>
 				</div>
 				<div id="portfolio_grid">
