--- a/app/templates/news-singel.html
+++ b/app/templates/news-singel.html
@@ -5,6 +5,7 @@
 		      <div class="blog_box">
 		        <a ui-sref="base.contactDescription" class="mask"><img src="{{news.img.url}}" alt="image" class="img-responsive zoom-img" alt=""/></a>
 		     	<h3><a ui-sref="base.contactDescription">{{news.name}}</a></h3>
-		     	<p>{{news.description}}</p>
+		     	<!-- <p>{{news.description}}</p> -->
+					<div ng-bind-html="news.description1"></div>
 		     </div>
 		    </div>
