--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -1,3 +1,4 @@
+
 <header class="ae-container-fluid ae-container-fluid--full rk-header ">
 <div class="container center-inside-content">
       <div class="row">
@@ -9,9 +10,11 @@
       <div class="al-wrapper-albums">
       <div class="row padding-video">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" ng-repeat="video in videoList">
-          <div class="al-some-albums">
+          <div class="al-some-albums" style="wigth=150px">
             <div ng-bind-html="video.video" class="video-limit"></div>
-            <a ui-sref="base.videoView({id:video.objectId})"><h5 class="al-name-albums">{{video.name}}</h5></a>
+              <div class="videoWrapper">
+                <a ui-sref="base.videoView({id:video.objectId})"><h5 class="al-name-albums">{{video.name}}</h5></a>
+              </div>
           </div>
         </div>
     </div>
