--- a/app/css/video.css
+++ b/app/css/video.css
@@ -38,9 +38,14 @@
 }
 .al-btn-add {
 	width: 80%;
-	margin: 10%;
+	margin: 10% 10% 0 10%;
 	height: 30px;
 	font-weight: bold;
+}
+.al-btn-add-add {
+	width: 80%;
+	margin: 0% 10% 10% 10%;
+	height: 30px;
 }
 .center-inside-content{
 	float: left;
